<resources>
    <string name="app_name">BleBattAndFindMe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ble_not_supported">BLE Not Supported On This Device</string>
    <string name="error_bluetooth_not_supported" >Bluetooth Not Supported On This Device</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_device_control">DeviceControlActivity</string>
    <string name="unknown_device">Unknown device</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_connection_state">Connection State:</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="alert_level">Alert Level</string>

    <string name="button_findme_connect">Connect FindMe</string>

    <string name="button_findme_disconnect">Disconnect FindMe</string>

    <string name="button_batt_connect">Connect Batt</string>

    <string name="button_batt_disconnect">Disconnect Batt</string>

    <string-array name="alert_level_arrays">
        <item>None</item>
        <item>Mid</item>
        <item>High</item>
    </string-array>
</resources>
